--- a/th-date-convert.css
+++ b/th-date-convert.css
@@ -1,6 +1,7 @@
 :host {
   display: inline-block;
   color: black;
+  font-size: 1em;
 }
 
 label {
@@ -44,7 +45,7 @@ core-selector .core-selected {
 
 .selector div {
   padding: 1px;
-  display: inline-block;
+  display: block;
   margin: 0 3px;
   padding: 1px;
 }
@@ -58,9 +59,9 @@ core-selector .core-selected {
 }
 
 #dateTypeFrom, #dateTypeTo {
-  border: 2px solid #eee; 
+  border: 1px solid #eee; 
   padding: 3px; 
-  width:259px; 
+  width: 259px; 
   font-size: 0.8em;
   display: block;
 }
